# scion

./: .gitignore  BUILD.bazel  WORKSPACE  docker.sh  scion.sh
go/acceptance/leader_acceptance/: BUILD.bazel  main.go
go/acceptance/patroni_lib_acceptance/: BUILD.bazel  main.go
go/acceptance/sigmgmt_createdb/: BUILD.bazel  main.go
go/discovery/: BUILD.bazel  main.go  setup.go
go/discovery/acl/: acl.go
go/discovery/dsconfig/: dsconfig.go  sample.go
go/discovery/dynamic/: dynamic.go  task.go
go/discovery/internal/acl/: BUILD.bazel  acl.go
go/discovery/internal/config/: BUILD.bazel  config.go  sample.go  sample_test.go
go/discovery/internal/dynamic/: BUILD.bazel  dynamic.go
go/discovery/internal/metrics/: BUILD.bazel  error.go  metrics.go
go/discovery/internal/static/: BUILD.bazel  static.go
go/discovery/internal/util/: BUILD.bazel  util.go
go/discovery/metrics/: metrics.go
go/discovery/static/: static.go
go/discovery/util/: util.go
go/ipprovider/: BUILD.bazel  main.go
go/ipprovider/internal/config/: BUILD.bazel  config.go
go/ipscraper/: BUILD.bazel  main.go
go/ipscraper/internal/config/: BUILD.bazel  config.go
go/lib/consul/: BUILD.bazel  README.md  leader.go  service.go
go/lib/consul/consulconfig/: BUILD.bazel  config.go
go/lib/consul/internal/leader/: BUILD.bazel  helper.go  leader.go  notifier.go  sessmon.go
go/lib/pathdb/patronipathdb/: BUILD.bazel  patronipathdb.go  patronipathdb_test.go
go/lib/pathdb/postgres/: BUILD.bazel  README.md  postgres.go  postgres_test.go
go/prodspec/schema/: BUILD.bazel  generator.py  helpers.go  query  schema.go  schema.yml  tiles.py
go/prodspec/validate/: BUILD.bazel  as.go  br.go  bs.go  cs.go  host.go  interface.go  isd.go  layout.go  main.go  organization.go  ps.go  sig.go
go/sig/: BUILD.bazel  main.go  sig.go
go/sig/anaconfig/: BUILD.bazel  config.go  config_test.go
go/sig/anaconfig/testdata/: 01-loadfromfile.json  02-loadfromfile.json
go/sig/base/: as.go  map.go
go/sig/base/anacore/: BUILD.bazel  as.go  map.go
go/sig/config/: BUILD.bazel  config.go
go/sig/egress/: atomic_sp.go  dispatcher.go  pktpol.go  session.go  sessmon.go
go/sig/egress/anapaya/policypathpool/: BUILD.bazel  pool.go
go/sig/egress/anapaya/sessselector/: BUILD.bazel  selector.go
go/sig/egress/reader/: reader.go
go/sig/internal/sigconfig/: BUILD.bazel  conf.go  conf_test.go  sample.go
go/sig/metrics/: metrics.go
go/sig/quagga/: BUILD.bazel  exporter.go
go/sig/sigcmn/: BUILD.bazel  common.go
go/sigmgmt/: .gitignore  BUILD.bazel  README.md  main.go
go/sigmgmt/auth/: BUILD.bazel  jwt_backend.go
go/sigmgmt/cfggen/: BUILD.bazel  cfggen.go  cfggen_test.go
go/sigmgmt/cfggen/testdata/: 1.json  2.json  3.json  4.json  5.json  6.json  README.md
go/sigmgmt/config/: BUILD.bazel  config.go
go/sigmgmt/ctrl/: BUILD.bazel  as.go  auth.go  common.go  policy.go  sites.go  svc.go  util.go
go/sigmgmt/db/: BUILD.bazel  common.go  db.go  migrate.go  schema.go
go/sigmgmt/netcopy/: BUILD.bazel  netcopy.go
go/sigmgmt/parser/: .gitignore  BUILD.bazel  Makefile  PathPredicate.g4  README.md  TrafficClass.g4  cond_cls.go  error_listener.go  parse.go  parse_class.go  parse_class_test.go  parse_selector.go  parse_selector_test.go  parse_test.go  pathpredicate_base_listener.go  pathpredicate_lexer.go  pathpredicate_listener.go  pathpredicate_parser.go
go/sigmgmt/parser/path_predicate/: pathpredicate_base_listener.go  pathpredicate_lexer.go  pathpredicate_listener.go  pathpredicate_parser.go
go/sigmgmt/parser/traffic_class/: BUILD.bazel  trafficclass_base_listener.go  trafficclass_lexer.go  trafficclass_listener.go  trafficclass_parser.go
go/sigmgmt/sigweb/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
go/sigmgmt/sigweb/e2e/: app.e2e-spec.ts  app.po.ts
go/sigmgmt/sigweb/scripts/: prod-url
go/sigmgmt/sigweb/src/: index.html  polyfills.ts  styles.scss
go/sigmgmt/sigweb/src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts  auth.guard.spec.ts  auth.guard.ts  mouseover.directive.ts
go/sigmgmt/sigweb/src/app/api/: api.module.ts  api.service.spec.ts  api.service.ts  user.service.spec.ts  user.service.ts
go/sigmgmt/sigweb/src/app/api/http-interceptors/: api-interceptor.ts  index.ts  log-level.ts  logger-interceptor.ts
go/sigmgmt/sigweb/src/app/app-routing/: app-routing.module.ts
go/sigmgmt/sigweb/src/app/config/: config.component.ts
go/sigmgmt/sigweb/src/app/contact/: contact.component.html  contact.component.ts
go/sigmgmt/sigweb/src/app/licenses/: licenses.component.html  licenses.component.ts
go/sigmgmt/sigweb/src/app/login/: login.component.html  login.component.scss  login.component.spec.ts  login.component.ts
go/sigmgmt/sigweb/src/app/material/: material.module.ts
go/sigmgmt/sigweb/src/app/policies/: policies.component.html  policies.component.scss  policies.component.ts
go/sigmgmt/sigweb/src/app/policies/policy-edit/: policy-edit.component.html  policy-edit.component.scss  policy-edit.component.ts
go/sigmgmt/sigweb/src/app/sites/: models.ts  sites.component.html  sites.component.scss  sites.component.spec.ts  sites.component.ts  sites.module.ts
go/sigmgmt/sigweb/src/app/sites/ip-allocations/: ip-allocations.component.html  ip-allocations.component.scss  ip-allocations.component.spec.ts  ip-allocations.component.ts
go/sigmgmt/sigweb/src/app/sites/models/: cond.ts  models.ts
go/sigmgmt/sigweb/src/app/testing/: testing.module.ts
go/sigmgmt/sigweb/src/app/utils/: swap.ts
go/sigmgmt/sigweb/src/assets/styles/: anapaya.scss  base.scss
go/sigmgmt/sigweb/src/environments/: environment.prod.ts  environment.ts  prod-url.ts
go/sigmgmt/static/: as.html  page.html  sites.html  style.css
go/sigmgmt/static/doc/: config.md  contact.md  help.md  sig.md  sigjson.md
go/sigmgmt/static/weblogger/: logs.html
go/sigmgmt/util/: BUILD.bazel  logger.go  util.go
go/sigmgmt/web/: as.go  as_form.go  sites.go  sites_form.go  web.go
go/sigmgmt/web/wikidoc/: wikidoc.go
go/sigmgmt/weblogger/: weblogger.go
(+289 files in other folders)
