load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/sig",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/consul:go_default_library",
        "//go/lib/consul/consulconfig:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/fatal:go_default_library",
        "//go/lib/infra/modules/itopo:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/sig/anaconfig:go_default_library",
        "//go/sig/base:go_default_library",
        "//go/sig/base/anacore:go_default_library",
        "//go/sig/base/core:go_default_library",
        "//go/sig/config:go_default_library",
        "//go/sig/disp:go_default_library",
        "//go/sig/egress:go_default_library",
        "//go/sig/egress/reader:go_default_library",
        "//go/sig/ingress:go_default_library",
        "//go/sig/internal/sigconfig:go_default_library",
        "//go/sig/metrics:go_default_library",
        "//go/sig/quagga:go_default_library",
        "//go/sig/sigcmn:go_default_library",
        "//go/sig/xnet:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_syndtr_gocapability//capability:go_default_library",
    ],
)

go_binary(
    name = "sig",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
