load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/acceptance/leader_acceptance",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/consul:go_default_library",
        "//go/lib/consul/consulconfig:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/log:go_default_library",
        "@com_github_hashicorp_consul//api:go_default_library",
    ],
)

go_binary(
    name = "leader_acceptance",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
