load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "leader.go",
        "service.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/consul",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/consul/consulconfig:go_default_library",
        "//go/lib/consul/internal/leader:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/periodic:go_default_library",
        "@com_github_hashicorp_consul//api:go_default_library",
    ],
)
