load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "helpers.go",
        "schema.go",
    ],
    importpath = "github.com/scionproto/scion/go/prodspec/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/env:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library"
    ],
)
