load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["exporter.go"],
    importpath = "github.com/scionproto/scion/go/sig/quagga",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/sig/base:go_default_library",
        "//go/sig/internal/sigconfig:go_default_library",
        "//go/sig/sigcmn:go_default_library",
        "@com_github_osrg_gobgp//zebra:go_default_library"
    ],
)
