load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jwt_backend.go"],
    importpath = "github.com/scionproto/scion/go/sigmgmt/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//go/sigmgmt/config:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
    ],
)
