load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cfggen.go"],
    importpath = "github.com/scionproto/scion/go/sigmgmt/cfggen",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/pathpol:go_default_library",
        "//go/lib/pktcls:go_default_library",
        "//go/sig/anaconfig:go_default_library",
        "//go/sig/mgmt:go_default_library",
        "//go/sigmgmt/db:go_default_library",
        "//go/sigmgmt/parser:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cfggen_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/lib/xtest:go_default_library",
        "//go/sig/anaconfig:go_default_library",
        "//go/sigmgmt/db:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
