load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cond_cls.go",
        "error_listener.go",
        "parse_class.go",
    ],
    importpath = "github.com/scionproto/scion/go/sigmgmt/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/pktcls:go_default_library",
        "//go/sigmgmt/parser/traffic_class:go_default_library",
        "@com_github_antlr_antlr4//runtime/Go/antlr:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parse_class_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_smartystreets_goconvey//convey:go_default_library"],
)
