load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "logger.go",
        "util.go",
    ],
    importpath = "github.com/scionproto/scion/go/sigmgmt/util",
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
