load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "error.go",
        "metrics.go",
    ],
    importpath = "github.com/scionproto/scion/go/discovery/internal/metrics",
    visibility = ["//go/discovery:__subpackages__"],
    deps = [
        "//go/lib/prom:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library"
    ],
)
