load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/scionproto/scion/go/discovery/internal/util",
    visibility = ["//go/discovery:__subpackages__"],
    deps = [
        "//go/discovery/internal/acl:go_default_library",
        "//go/discovery/internal/metrics:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/topology:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
    ],
)
