load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/scionproto/scion/go/ipscraper/internal/config",
    visibility = ["//go/ipscraper:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/env:go_default_library",
    ],
)
