load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/scionproto/scion/go/lib/consul/consulconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/common:go_default_library",
        "//go/lib/util:go_default_library",
        "@com_github_hashicorp_consul//api:go_default_library"
    ],
)
